add outline to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,71 @@
    
 </head>
 <body>
-   
+    <nav>
+        <button> <!--High Scores--> </button> <!--left-->
+        <p> <!--Timer--> </p> <!--left-->
+    </nav>
+   <main>
+        <article class="title">
+            <h1>The Velocipastor Quiz</h1>
+            <p>A quiz about a gem of a movie.</p>
+            <p>Fun piece of trivia via IMBD to get you started:</p>
+            <p>Someone called the police during filming to report that, quote, "ninjas and someone in a short fat dinosaur costume were running around in the park".</p>
+            <button>Start Quiz</button>
+        </article>
+        <article class="question">
+            <h2>Is The Velocipastor the greatest movie ever made?</h2>
+            <ol>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class ="right"></li>
+            </ol>
+        </article>
+        <article class="question">
+            <h2></h2>
+            <ol>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class ="right"></li>
+            </ol>
+        </article>
+        <article class="question">
+            <h2></h2>
+            <ol>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class ="right"></li>
+            </ol>
+        </article>
+        <article class="question">
+            <h2></h2>
+            <ol>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class ="right"></li>
+            </ol>
+        </article>
+        <article class="question">
+            <h2></h2>
+            <ol>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class="wrong"></li>
+                <li class ="right"></li>
+            </ol>
+        </article>
+        <article class="score">
+            <h2>Highscores</h2>
+            <section><!--scoreboard--></section>
+            <button>Try Again</button>
+            <button>Clear Board</button>
+        </article>
+   </main>
+   <footer></footer>
     <script src= "script.js"></script>
 </body>
 </html>
