added pseudo code and linked start page to correct button on highscorepage html

--- a/highscorepage.html
+++ b/highscorepage.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-        <!-- link to go back to the quiz -->
-        <a href="./index.html">Back to Quiz</a>
     </header>
     <main class="score">
         <h2>Highscores</h2>
         <section><!--scoreboard--></section>
-        <button>Try Again</button>
-        <button>Clear Board</button>
+        <!-- link to go back to the quiz -->
+        <button class="try-again"><a href="./index.html">Try Again</a></button>
+        <!-- button to clear the scoreboard from local storage -->
+        <button class="clear-board">Clear Board</button>
     </main>
     <!-- link js file  -->
     <script src="./assets/js/highscores.js"></script>
