hide start page after start button is pressed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p id="timer"> <!--Timer--> </p> <!--right-->
     </nav>
     <main>
-       <section id="start-page">
+       <section id="start-page" class="show">
         <h1>
             Probably the only quiz about the amazing film "The Velocipastor".
         </h1>
