add score to local storage and redirect to scoreboard at end

--- a/highscorepage.html
+++ b/highscorepage.html
@@ -14,7 +14,7 @@
     </header>
     <main class="score">
         <h2>Highscores</h2>
-        <section><!--scoreboard--></section>
+        <section id="highscores"><!--scoreboard--></section>
         <!-- link to go back to the quiz -->
         <button class="try-again"><a href="./index.html">Try Again</a></button>
         <!-- button to clear the scoreboard from local storage -->
