--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <section id="score-log" class="hide">
             <h2>You finished the quiz! Your score was <span id="score"></span>. Enter your initials to save your score.</h2>
             <form>
-                <input type="text" placeholder="put initials here">
-                <button>Add my score!</button>
+                <input id=initials type="text" placeholder="put initials here">
+                <button id="add-score">Add my score!</button>
             </form>
         </section>
     </main>
