added styling elements

--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
      <link rel="stylesheet" href="./assets/css/style.css">
      <title>Quiz</title>
      <!-- Update title to be more descriptive -->
+     
    
 </head>
 <body>
     <nav>
-        <a href="./highscorepage.html">High Scores!</a> <!--left-->
+        <a href="./highscorepage.html">Click to View High Scores!</a> <!--left-->
         <p id="timer"> <!--Timer--> </p> <!--right-->
     </nav>
     <main>
        <section id="start-page" class="show">
         <h1>
-            Probably the only quiz about the amazing film "The Velocipastor".
+            Probably the only quiz about the amazing film "The Velocipastor"
         </h1>
-        <p>
-            You will have 60 seconds to answer all of the questions. For each wrong answer you will have 5 seconds deducted. Your remaining time will be your final score.
-        </p>
+        <section id="info">
+            <img src="./assets/velocipastorposter.jpg">
+            <p>
+                You will have 75 seconds to answer all of the questions. For each wrong answer you will have 5 seconds deducted. Your remaining time will be your final score.
+            </p>
+        </section>
         <button id="start">Start Quiz</button>
         </section>  
 
