final style and content updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./assets/css/style.css">
-     <title>Quiz</title>
+     <title>Velocipastor Quiz</title>
      <!-- Update title to be more descriptive -->
      
    
@@ -23,7 +23,7 @@
         <section id="info">
             <img src="./assets/velocipastorposter.jpg">
             <p>
-                You will have 75 seconds to answer all of the questions. For each wrong answer you will have 5 seconds deducted. Your remaining time will be your final score.
+                You will have 75 seconds to answer all of the questions. For each wrong answer you will have 10 seconds deducted. Your remaining time will be your final score.
             </p>
         </section>
         <button id="start">Start Quiz</button>
