--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./assets/css/style.css">
-     <title>Velocipastor Quiz</title>
+     <title>VelociPastor Quiz</title>
      <!-- Update title to be more descriptive -->
      
    
@@ -18,7 +18,7 @@
     <main>
        <section id="start-page" class="show">
         <h1>
-            Probably the only quiz about the amazing film "The Velocipastor"
+            Probably the only quiz about the amazing film "The VelociPastor"
         </h1>
         <section id="info">
             <img src="./assets/velocipastorposter.jpg">
